<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_page">
    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/hello__string"
        android:textColor="@color/hello__color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_username_string"

        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hello">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_ek1_string"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bnt_register"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/_bg__loging_ek2_shape"
        android:text="Register"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password"
        app:layout_constraintBottom_toTopOf="@id/bnt_loging"
        app:layout_constraintStart_toStartOf="@id/layout_input_password"
        app:layout_constraintEnd_toEndOf="@id/layout_input_password"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bnt_loging"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_ingresar"
        android:text="@string/sing_in_string"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_password"
        app:layout_constraintStart_toStartOf="@+id/layout_input_password"
        app:layout_constraintTop_toBottomOf="@id/bnt_register" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/or_continue_with_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnt_loging" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/line_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_continue"
        app:layout_constraintEnd_toStartOf="@+id/tv_continue"
        app:layout_constraintStart_toStartOf="@+id/bnt_loging"
        app:layout_constraintTop_toTopOf="@+id/tv_continue" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/line_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_continue"
        app:layout_constraintEnd_toEndOf="@+id/bnt_loging"
        app:layout_constraintStart_toEndOf="@id/tv_continue"
        app:layout_constraintTop_toTopOf="@+id/tv_continue" />

    <LinearLayout
        android:id="@+id/layout_social_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_google"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/google_logo"
            android:contentDescription="@string/app_name" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/facebook_logo_blue"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/not_a_member__register_now_string"
        app:layout_constraintEnd_toEndOf="@+id/layout_social_buttons"
        app:layout_constraintStart_toStartOf="@+id/layout_social_buttons"
        app:layout_constraintTop_toBottomOf="@id/layout_social_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>

